--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             background: none;
         }
         .num {
-            font-weight: bold;
-            font-size: 1.21em;
+            font-weight: 600;
+            font-size: 1em;
             color: var(--blue-light);
             margin-bottom: 8px;
         }
