--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <div class="num">8. ¿Cómo usar Buy-Zy?</div>
             <div>
                 <p>
-                    Abre la app y escribe la ciudad para explorar productos. Usa el buscador para filtrar por producto o comercio, compara precios y selecciona. Pulsa el botón de WhatsApp para contactar vendedor con tus productos seleccionados. Puedes enviar mensajes para varios comercios uno a la vez, pulsando nuevamente el botón cuando regreses a la app. El botón se desactiva automáticamente cuando ya no quedan mensajes.
+                   Abre la app y escribe la ciudad donde deseas explorar productos ofrecidos por comercios locales. Usa el buscador para filtrar por producto o comercio, compara precios y selecciona la mejor opción. Al seleccionar productos, se activará el botón de WhatsApp para contactar directamente al vendedor o, si lo prefieres, haz clic en el botón azul para solicitar domicilio de los productos seleccionados. Puedes escoger varios productos de diferentes comercios. Cuando estés listo, haz clic en el botón de WhatsApp para enviar el mensaje al primer comercio. Si seleccionaste productos de otros vendedores, vuelve a la app y repite el proceso para enviar los siguientes mensajes. El botón se desactivará automáticamente cuando todos los mensajes hayan sido enviados y podrás salir de la app.
                 </p>
             </div>
         </section>
